--- a/csscheatsheet/css/style.css
+++ b/csscheatsheet/css/style.css
@@ -11,6 +11,19 @@ body {
   margin: 0;
 }
 
+.button {
+  background: #333;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+.button:hover {
+  background-color: red;
+  color: white;
+
+}
+
 .container {
   /* 可以根据浏览器的缩小变大进行自动适应，所以可以用百分比 */
   width: 80%;
@@ -34,5 +47,127 @@ body {
 
   padding: 20px;
 
-  margin:20px 0px; 
+  margin: 20px 0px;
+}
+
+.box-1 h1 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 800;
+  font-style: italic;
+  text-decoration: underline;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  word-spacing: 1em;
+}
+
+.box-2 {
+  border: 3px dotted #ccc;
+  padding: 20px;
+  margin: 20px 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: red;
+}
+
+a:active {
+  color: green;
+}
+
+.categories {
+  border: 1px #ccc solid;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.categories h2 {
+  text-align: center;
+}
+
+.categories ul {
+  padding: 0;
+  padding-left: 20px;
+  list-style: none;
+}
+
+.categories li {
+  padding-bottom: 6px;
+  border-bottom: dotted 1px #333;
+  list-style-image: url('../images/mark_test.png');
+}
+
+.my-form {
+  padding: 20px;
+}
+
+.my-from .form-group {
+  padding-bottom: 15px;
+}
+
+.my-form label {
+  /* go to a new line */
+  display: block;
+}
+
+.my-form input[type="text"],
+.my-form textarea {
+  padding: 8px;
+  ;
+  width: 100%;
+}
+
+.block {
+  float: left;
+  width: 33.3%;
+  border: 1px solid #ccc;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.clr {
+  clear: both;
+}
+
+#main-block {
+  float: left;
+  width: 70%;
+}
+
+#sidebar {
+  float: right;
+  width: 30%;
+  background-color: #333;
+  color: #fff;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.p-box {
+  width: 800px;
+  height: 500px;
+  border: 1px solid black;
+  margin-top: 30px;
+  position: relative;
+}
+
+.p-box h1 {
+  position: absolute;
+  top: 100px;
+  left: 200px;
+}
+
+.p-box h2{
+  position: absolute;
+  bottom: 40px;
+  right:100px;
+}
+
+.fix-me{
+  position: fixed;
+  top:400px;
 }
